# xinyi

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  README.md  config.default.yaml  config.example.yaml  docker-compose.yml  extract_tabs.py  pyproject.toml  pytest.ini  requirements.txt  rewrite_build_ui.py  run.sh  xinyi-windows.spec  xinyi.spec
.github/workflows/: build.yml  ci.yml  docker-publish.yml
docs/: AGENT_GUIDE.md  architecture.md  cognitive_research_brief.md  connect_chrome.py  digital-twin-memory-architecture.md  inspect_gradio.py  installation.md  privacy.md  screenshot_tabs.py  screenshot_ws.py  使用说明.md
scripts/: init_models.sh  install.sh  package.sh  synthesize_thinking.py  train_thinking_batch.py
src/: __main__.py  app.py  config.py  context.py  exceptions.py  logging_config.py  prompt_registry.py
src/belief/: contradiction.py  extractor.py  graph.py
src/cognitive/: active_probe.py  contradiction_detector.py  inference_engine.py  task_library.py
src/data/: cleaner.py  contact_registry.py  conversation_builder.py  decrypt.py  emotion_tagger.py  parser.py  partner_config.py  privacy_redactor.py
src/engine/: __init__.py  advisor_registry.py  chat.py  learning.py  partner_advisor.py  persona.py  session.py  training.py
src/eval/: evaluator.py
src/mediation/: mediator.py
src/memory/: __init__.py  embedder.py  memory_bank.py  reranker.py  retriever.py  vector_store.py
src/personality/: analyzer.py  emotion_analyzer.py  emotion_tracker.py  guidance.py  (+2 more)
tests/: check_imports.py  conftest.py
(+44 files in other folders)
